--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ main .game {
 }
 
 main .game .placeholder {
-	height: 35px;
+	height: 33.2px;
 }
 
 main .game .container .player-turn {
@@ -101,12 +101,13 @@ main .game .container .game-board {
 	margin-left: auto;
 	margin-right: auto;
 	width: 640px;
+	max-width: 100%;
 	height: 550px;
 	background-color: var(--main-board-color);
 	border: 5px solid var(--main-border-color);
 	display: grid;
-	grid-template-columns: repeat(7, 90px);
-	grid-template-rows: repeat(6, 90px);
+	grid-template-columns: repeat(7, auto);
+	grid-template-rows: repeat(6, auto);
 	align-items: center;
 	margin-bottom: 20px;
 	margin-top: 20px;
